==> Xintnn/GuaduateProject/HARDWARE/OLED/oled.c <==
//////////////////////////////////////////////////////////////////////////////////	 
//本程序只供学习使用，未经作者许可，不得用于其它任何用途
//中景园电子
//店铺地址：http://shop73023976.taobao.com/?spm=2013.1.0.0.M4PqC2
//
//  文 件 名   : main.c
//  版 本 号   : v2.0
//  作    者   : Evk123
//  生成日期   : 2014-0101
//  最近修改   : 
//  功能描述   : 0.69寸OLED 接口演示例程(STM32F103ZE系列IIC)
//              说明: 
//              ----------------------------------------------------------------
//              GND   电源地
//              VCC   接5V或3.3v电源
//              SCL   接PD6（SCL）
//              SDA   接PD7（SDA）            
//              ----------------------------------------------------------------
//Copyright(C) 中景园电子2014/3/16
//All rights reserved
//////////////////////////////////////////////////////////////////////////////////?

#include <stdio.h>
#include <string.h>
#include <ctype.h>
#include <stdlib.h>
#include <stdarg.h>


#include <stm32f4xx.h>	  
#include "oled.h"
#include "oledfont.h"
//#include "bmp.h"

#define SCL_W	PBout(8)
#define SDA_W	PBout(9)
#define SDA_R	PBin(9)

static GPIO_InitTypeDef 		GPIO_InitStructure;

//OLED的显存
//存放格式如下.
//[0]0 1 2 3 ... 127	
//[1]0 1 2 3 ... 127	
//[2]0 1 2 3 ... 127	
//[3]0 1 2 3 ... 127	
//[4]0 1 2 3 ... 127	
//[5]0 1 2 3 ... 127	
//[6]0 1 2 3 ... 127	
//[7]0 1 2 3 ... 127 			   
void sda_pin_mode(GPIOMode_TypeDef pin_mode)
{
	
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9;		//第7根引脚
	GPIO_InitStructure.GPIO_Mode= pin_mode;	//输出/输入模式
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;	//推挽输出，增加输出电流能力。
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;//高速响应
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;	//没有使能上下拉电阻

	GPIO_Init(GPIOB,&GPIO_InitStructure);
}
/**********************************************
//IIC Start
**********************************************/
void IIC_Start(void)
{
	//保证SDA引脚为输出模式
	sda_pin_mode(GPIO_Mode_OUT);
	
	SCL_W=1;
	SDA_W=1;
	delay_us(5);

	SDA_W=0;
	delay_us(5);
	
	
	SCL_W=0;
	delay_us(5);		//钳住I2C总线

}

/**********************************************
//IIC Stop
**********************************************/
void IIC_Stop(void)
{
	//保证SDA引脚为输出模式
	sda_pin_mode(GPIO_Mode_OUT);	
	
	SCL_W=1;
	SDA_W=0;
	delay_us(5);

	SDA_W=1;
	delay_us(5);
	
}

uint8_t IIC_Wait_Ack(void)
{
	uint8_t ack=0;
	
	//保证SDA引脚为输IN模式
	sda_pin_mode(GPIO_Mode_IN);	
	SCL_W=1;
	delay_us(5);
	
	if(SDA_R)
		ack=1;	//无应答信号
	else
		ack=0;	//有应答信号

	SCL_W=0;	//总线在忙的状态
	delay_us(5);
	
	return ack;

}
/**********************************************
// IIC Write byte
**********************************************/

void Write_IIC_Byte(unsigned char IIC_Byte)
{

	int32_t i;
	
	//保证SDA引脚为输出模式
	sda_pin_mode(GPIO_Mode_OUT);	
	
	SCL_W=0;
	SDA_W=0;
	delay_us(5);

	for(i=7; i>=0; i--)
	{
		//先更改SDA引脚的电平
		if(IIC_Byte & (1<<i))
		{
			SDA_W=1;
		
		}
		else
		{
			SDA_W=0;
		}
		
		delay_us(5);
		
		SCL_W=1;
		delay_us(5);
		
		
		SCL_W=0;
		delay_us(5);	
	}

}
/**********************************************
// IIC Write Command
**********************************************/
void Write_IIC_Command(unsigned char IIC_Command)
{
   IIC_Start();
   Write_IIC_Byte(0x78);            //Slave address,SA0=0
	IIC_Wait_Ack();	
   Write_IIC_Byte(0x00);			//write command
	IIC_Wait_Ack();	
   Write_IIC_Byte(IIC_Command); 
	IIC_Wait_Ack();	
   IIC_Stop();
}
/**********************************************
// IIC Write Data
**********************************************/
void Write_IIC_Data(unsigned char IIC_Data)
{
   IIC_Start();
   Write_IIC_Byte(0x78);			//D/C#=0; R/W#=0
	IIC_Wait_Ack();	
   Write_IIC_Byte(0x40);			//write data
	IIC_Wait_Ack();	
   Write_IIC_Byte(IIC_Data);
	IIC_Wait_Ack();	
   IIC_Stop();
}
void OLED_WR_Byte(unsigned dat,unsigned cmd)
{
	if(cmd)
			{

   Write_IIC_Data(dat);
   
		}
	else {
   Write_IIC_Command(dat);
		
	}


}


/********************************************
// fill_Picture
********************************************/
void fill_picture(unsigned char fill_Data)
{
	unsigned char m,n;
	for(m=0;m<8;m++)
	{
		OLED_WR_Byte(0xb0+m,0);		//page0-page1
		OLED_WR_Byte(0x00,0);		//low column start address
		OLED_WR_Byte(0x10,0);		//high column start address
		for(n=0;n<128;n++)
			{
				OLED_WR_Byte(fill_Data,1);
			}
	}
}
//坐标设置

	void OLED_Set_Pos(unsigned char x, unsigned char y) 
{ 	OLED_WR_Byte(0xb0+y,OLED_CMD);
	OLED_WR_Byte(((x&0xf0)>>4)|0x10,OLED_CMD);
	OLED_WR_Byte((x&0x0f),OLED_CMD); 
}   	  
//开启OLED显示    
void OLED_Display_On(void)
{
	OLED_WR_Byte(0X8D,OLED_CMD);  //SET DCDC命令
	OLED_WR_Byte(0X14,OLED_CMD);  //DCDC ON
	OLED_WR_Byte(0XAF,OLED_CMD);  //DISPLAY ON
}
//关闭OLED显示     
void OLED_Display_Off(void)
{
	OLED_WR_Byte(0X8D,OLED_CMD);  //SET DCDC命令
	OLED_WR_Byte(0X10,OLED_CMD);  //DCDC OFF
	OLED_WR_Byte(0XAE,OLED_CMD);  //DISPLAY OFF
}		   			 
//清屏函数,清完屏,整个屏幕是黑色的!和没点亮一样!!!	  
void OLED_Clear(void)  
{  
	u8 i,n;		    
	for(i=0;i<8;i++)  
	{  
		OLED_WR_Byte (0xb0+i,OLED_CMD);    //设置页地址（0~7）
		OLED_WR_Byte (0x00,OLED_CMD);      //设置显示位置—列低地址
		OLED_WR_Byte (0x10,OLED_CMD);      //设置显示位置—列高地址   
		for(n=0;n<128;n++)OLED_WR_Byte(0,OLED_DATA); 
	} //更新显示
}
void OLED_On(void)  
{  
	u8 i,n;		    
	for(i=0;i<8;i++)  
	{  
		OLED_WR_Byte (0xb0+i,OLED_CMD);    //设置页地址（0~7）
		OLED_WR_Byte (0x00,OLED_CMD);      //设置显示位置—列低地址
		OLED_WR_Byte (0x10,OLED_CMD);      //设置显示位置—列高地址   
		for(n=0;n<128;n++)OLED_WR_Byte(1,OLED_DATA); 
	} //更新显示
}
//在指定位置显示一个字符,包括部分字符
//x:0~127
//y:0~63
//mode:0,反白显示;1,正常显示				 
//size:选择字体 16/12 
void OLED_ShowChar(u8 x,u8 y,u8 chr,u8 Char_Size)
{      	
	unsigned char c=0,i=0;	
		c=chr-' ';//得到偏移后的值			
		if(x>Max_Column-1){x=0;y=y+2;}
		if(Char_Size ==16)
			{
			OLED_Set_Pos(x,y);	
			for(i=0;i<8;i++)
			OLED_WR_Byte(F8X16[c*16+i],OLED_DATA);
			OLED_Set_Pos(x,y+1);
			for(i=0;i<8;i++)
			OLED_WR_Byte(F8X16[c*16+i+8],OLED_DATA);
			}
			else {	
				OLED_Set_Pos(x,y);
				for(i=0;i<6;i++)
				OLED_WR_Byte(F6x8[c][i],OLED_DATA);
				
			}
}
//m^n函数
u32 oled_pow(u8 m,u8 n)
{
	u32 result=1;	 
	while(n--)result*=m;    
	return result;
}				  
//显示2个数字
//x,y :起点坐标	 
//len :数字的位数
//size:字体大小
//mode:模式	0,填充模式;1,叠加模式
//num:数值(0~4294967295);	 		  
void OLED_ShowNum(u8 x,u8 y,u32 num,u8 len,u8 size2)
{         	
	u8 t,temp;
	u8 enshow=0;						   
	for(t=0;t<len;t++)
	{
		temp=(num/oled_pow(10,len-t-1))%10;
		if(enshow==0&&t<(len-1))
		{
			if(temp==0)
			{
				OLED_ShowChar(x+(size2/2)*t,y,' ',size2);
				continue;
			}else enshow=1; 
		 	 
		}
	 	OLED_ShowChar(x+(size2/2)*t,y,temp+'0',size2); 
	}
} 
//显示一个字符号串
void OLED_ShowString(u8 x,u8 y,u8 *chr,u8 Char_Size)
{
	unsigned char j=0;
	while (chr[j]!='\0')
	{		OLED_ShowChar(x,y,chr[j],Char_Size);
			x+=8;
		if(x>120){x=0;y+=2;}
			j++;
	}
}
//显示汉字
void OLED_ShowCHinese(u8 x,u8 y,u8 no)
{      			    
	u8 t,adder=0;
	OLED_Set_Pos(x,y);	
    for(t=0;t<16;t++)
		{
				OLED_WR_Byte(Hz[2*no][t],OLED_DATA);
				adder+=1;
     }	
		OLED_Set_Pos(x,y+1);	
    for(t=0;t<16;t++)
			{	
				OLED_WR_Byte(Hz[2*no+1][t],OLED_DATA);
				adder+=1;
      }					
}
/***********功能描述：显示显示BMP图片128×64起始点坐标(x,y),x的范围0～127，y为页的范围0～7*****************/
void OLED_DrawBMP(unsigned char x0, unsigned char y0,unsigned char x1, unsigned char y1,unsigned char BMP[])
{ 	
 unsigned int j=0;
 unsigned char x,y;
  
  if(y1%8==0) y=y1/8;      
  else y=y1/8+1;
	for(y=y0;y<y1;y++)
	{
		OLED_Set_Pos(x0,y);
    for(x=x0;x<x1;x++)
	    {      
	    	OLED_WR_Byte(BMP[j++],OLED_DATA);	    	
	    }
	}
} 

//初始化SSD1306					    
void OLED_Init(void)
{ 	
	//PB硬件时钟使能	
	RCC_AHB1PeriphClockCmd(RCC_AHB1Periph_GPIOB, ENABLE);
	
	
	//配置PB6 PB7为输出模式
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8|GPIO_Pin_9;		//第6 7根引脚
	GPIO_InitStructure.GPIO_Mode= GPIO_Mode_OUT;	//输出模式
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;	//推挽输出，增加输出电流能力。
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_100MHz;//高速响应
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;	//没有使能上下拉电阻

	GPIO_Init(GPIOB,&GPIO_InitStructure);	
	
	//看时序图
	PBout(8)=1;
	
	//看时序图	
	PBout(9)=1;
	
	
	delay_ms(200);

	OLED_WR_Byte(0xAE,OLED_CMD);//--display off
	OLED_WR_Byte(0x00,OLED_CMD);//---set low column address
	OLED_WR_Byte(0x10,OLED_CMD);//---set high column address
	OLED_WR_Byte(0x40,OLED_CMD);//--set start line address  
	OLED_WR_Byte(0xB0,OLED_CMD);//--set page address
	OLED_WR_Byte(0x81,OLED_CMD); // contract control
	OLED_WR_Byte(0xFF,OLED_CMD);//--128   
	OLED_WR_Byte(0xA1,OLED_CMD);//set segment remap 
	OLED_WR_Byte(0xA6,OLED_CMD);//--normal / reverse
	OLED_WR_Byte(0xA8,OLED_CMD);//--set multiplex ratio(1 to 64)
	OLED_WR_Byte(0x3F,OLED_CMD);//--1/32 duty
	OLED_WR_Byte(0xC8,OLED_CMD);//Com scan direction
	OLED_WR_Byte(0xD3,OLED_CMD);//-set display offset
	OLED_WR_Byte(0x00,OLED_CMD);//
	
	OLED_WR_Byte(0xD5,OLED_CMD);//set osc division
	OLED_WR_Byte(0x80,OLED_CMD);//
	
	OLED_WR_Byte(0xD8,OLED_CMD);//set area color mode off
	OLED_WR_Byte(0x05,OLED_CMD);//
	
	OLED_WR_Byte(0xD9,OLED_CMD);//Set Pre-Charge Period
	OLED_WR_Byte(0xF1,OLED_CMD);//
	
	OLED_WR_Byte(0xDA,OLED_CMD);//set com pin configuartion
	OLED_WR_Byte(0x12,OLED_CMD);//
	
	OLED_WR_Byte(0xDB,OLED_CMD);//set Vcomh
	OLED_WR_Byte(0x30,OLED_CMD);//
	
	OLED_WR_Byte(0x8D,OLED_CMD);//set charge pump enable
	OLED_WR_Byte(0x14,OLED_CMD);//
	
	OLED_WR_Byte(0xAF,OLED_CMD);//--turn on oled panel
	
	OLED_WR_Byte(0x2E,OLED_CMD);        //关闭滚动
}
void name_ch(void)//名字汉字
{
	OLED_ShowCHinese(0,0,0);//智
	OLED_ShowCHinese(18,0,1);//能
	OLED_ShowCHinese(36,0,2);//语
	OLED_ShowCHinese(54,0,3);//音
	OLED_ShowCHinese(72,0,4);//导
	OLED_ShowCHinese(90,0,5);//盲
	OLED_ShowCHinese(108,0,6);//仪
  OLED_ShowCHinese(0,2,7);//仪
}
void ok_ch(void)//设计者汉字
{

	OLED_ShowCHinese(18,4,5);//计
	OLED_ShowCHinese(36,4,6);//者

	OLED_ShowCHinese(54,4,7);//赖
	OLED_ShowCHinese(72,4,8);//力
	OLED_ShowCHinese(90,4,9 );//胜
}
void designer_ch(void)//设计者汉字
{
	OLED_ShowCHinese(0,2,28);//设
	OLED_ShowCHinese(18,2,29);//计
	OLED_ShowCHinese(36,2,30);//者
	OLED_ShowChar(54,2,58,16);// :
	OLED_ShowCHinese(72,2,31);//赖
	OLED_ShowCHinese(90,2,32);//力
	OLED_ShowCHinese(108,2,33);//胜
}
void distance_ch(void)//距离汉字
{
	OLED_ShowCHinese(0,6,24);//距
	OLED_ShowCHinese(18,6,25);//离
	OLED_ShowChar(36,6,58,16);//:
	OLED_ShowChar(90,6,109,16);//m
	OLED_ShowChar(108,6,109,16);//m
}
void time_char(void)//时间字符
{
	OLED_ShowChar(0,5,50,16);//2
	OLED_ShowChar(12,5,48,16);//0
	OLED_ShowChar(24,5,50,16);//2
	OLED_ShowChar(36,5,52,16);//4
	OLED_ShowChar(48,5,47,16);///
	OLED_ShowChar(60,5,53,16);//5
	OLED_ShowChar(72,5,47,16);///
	OLED_ShowChar(84,5,49,16);//1
	OLED_ShowChar(96,5,56,16);//8
}
void dead_ch(void)//正前方汉字
{
	OLED_ShowCHinese(0,3,7);//正
	OLED_ShowCHinese(18,3,10);//前
	OLED_ShowCHinese(36,3,11);//方
	OLED_ShowCHinese(54,3,12);//有
	OLED_ShowCHinese(72,3,13);//障
	OLED_ShowCHinese(90,3,14);//碍
	OLED_ShowCHinese(108,3,15);//物
	
}
void left_ch(void)//左前方汉字
{
	OLED_ShowCHinese(0,3,8);//左
	OLED_ShowCHinese(18,3,10);//前
	OLED_ShowCHinese(36,3,11);//方
	OLED_ShowCHinese(54,3,12);//有
	OLED_ShowCHinese(72,3,13);//障
	OLED_ShowCHinese(90,3,14);//碍
	OLED_ShowCHinese(108,3,15);//物
	
}
void right_ch(void)//左前方汉字
{
	OLED_ShowCHinese(0,3,9);//左
	OLED_ShowCHinese(18,3,10);//前
	OLED_ShowCHinese(36,3,11);//方
	OLED_ShowCHinese(54,3,12);//有
	OLED_ShowCHinese(72,3,13);//障
	OLED_ShowCHinese(90,3,14);//碍
	OLED_ShowCHinese(108,3,15);//物
	
}
